@@ -14,6 +14,8 @@ _PROPERTIES = [
     dict(name='autoplay', type_='boolean', value=True),
     dict(name='iframe_width', type_='string', value='75%'),
     dict(name='iframe_height', type_='string', value='75%'),
+    dict(name='overlay_gallery', type_='boolean', value=True),
+    dict(name='slideshow', type_='int', value=0),
 ]
 
 
