@@ -6,7 +6,17 @@ Changelog
 
 - Upgraded to prettyPhoto library including it's css and image sprite to 3.0.1
   to fix issues with jQuery 1.4.4 (see http://bit.ly/hxYUrt) which is shipped 
-  with latest Plone 4 by default. This fixes #2.  [saily]
+  with latest Plone 4 by default. This fixes #2.
+  [saily]
+  
+- Added default thumbnails for 'overlay_galleries' feature.
+  [saily]
+
+- Added 'overlay_gallery' and 'slideshow' as additional configuration options
+  but disabled by default cause of a bug in jquery.prettyPhoto.js which aviods
+  displaying thumbnails not ending on (jpg|jpeg|png|gif). 
+  See http://bit.ly/eKYdrF
+  [saily]
 
 0.3.3 (2010-12-20)
 ------------------
